--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,7 @@
     --primary-color: #2f2a2a;
     --secondary-color: #c6b6b6;
 
-    --background-color: #585252;
+    --background-color: #7b6e6e;
     --path_bar_background_color: #201c1c;
     --path_bar_innder_background_color: #312c2c;
     --side_bar_background_color: #2f2a2a;
