--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,7 @@
     --primary-color: #2f2a2a;
     --secondary-color: #c6b6b6;
 
-    --background-color: #7b6e6e;
+    --background-color: #695e5e;
     --path_bar_background_color: #201c1c;
     --path_bar_innder_background_color: #312c2c;
     --side_bar_background_color: #2f2a2a;
@@ -15,6 +15,7 @@
 
     --text-color: #ffffff;
     --secondary-text-color: #0deeaa;
+    --tertiary-text-color: #9e65cd;
     --terminal-text-color: darkgray;
 }
 
@@ -46,4 +47,23 @@ body {
 * {
     box-sizing: border-box;
     word-break: keep-all;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #666;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
+    width: 0;
+    height: 0;
 }
